# FocusTree

./: .gitignore  CMakeLists.txt  FocusTree.service.save_file.json  Linkfile  Makefile  README.org  focus.go  focus.py  focus_test.go  focusnag.py  focustree.rb  ftclient.py  ftclient.sh  ftclient.spec  ftinit.py  ftserver.py  ftserver.spec  ftwebapp.py  go.mod  index.html  mailtool.py  main.js  options.py  package-lock.json  program_options.py  pyinstall-it.sh  readme.org  requirements.txt  setup.py  test_program_options.py  tree_manager_save_Expected.json
clients/basic_js_client/: index.html  main.js  styles.css
clients/ft-web-client/: package-lock.json  package.json  to-rpi.sh  tslint.json
clients/ft-web-client/src/: App.tsx
clients/ft-web-client/src/components/: commandForm.tsx  demoComponent.css  demoComponent.tsx
cmake/modules/: orgmanpages.cmake
focus/: focus.go  focus_test.go
goftprint/: main.go
goftserver/: main.go
libexec/FocusTree/: focus.py  ftclient.py  ftinit.py  ftserver.py  ftwebapp.py  program_options.py
misc/: curses_client.py
share/FocusTree/clients/basic_js_client/: index.html  main.js  styles.css
share/FocusTree/clients/ft-web-client/: package-lock.json  to-rpi.sh
share/FocusTree/clients/ft-web-client/src/components/: demoComponent.tsx
share/man/man1/: ftclient.org
source/: conf.py  index.rst
